--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #9575CD ;
+    background-color: #9575CD;
     color:floralwhite;
 }
 
@@ -28,3 +28,12 @@ address{
     margin:0px;
     color:#0f0f0f;
 }
+
+a {
+    color: #ffffff;
+    font-weight: bold;
+}
+
+a:hover {
+    color: hotpink;
+  }
