--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,12 @@ a {
 a:hover {
     color: hotpink;
   }
+
+  body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
