--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ address{
 }
 
 a {
-    color: #ffffff;
+/*    color: #ffffff; */
     font-weight: bold;
 }
 
@@ -45,4 +45,11 @@ a:hover {
 
 .navbar-dark {
      background-color: #512DA8;
+}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
