--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,12 @@ a:hover {
     left: 0;
     min-height: 300px;
 }
+
+
+.carousel-caption {
+    max-width: 550px;
+    padding: 0 20px;
+    margin:0 auto;
+    margin-top: 200px;
+    text-align:center;
+}
