--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a:hover {
 
 .carousel-caption {
     max-width: 550px;
-    padding: 0 20px;
+    padding: 80px;
     margin:0 auto;
     margin-top: 200px;
     text-align:center;
